user crud ok - book crud dropdown category -error-fixing